# agent-with-sandbox-code-execution

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
examples/: basic_usage.py
src/: config.py  main.py  utils.py
src/agent/: __init__.py  agent.py  graph.py  state.py
src/sandbox/: __init__.py  executor.py  manager.py
src/security/: __init__.py  boundaries.py  secrets.py  validator.py
src/tools/: __init__.py  base.py  bash.py  file_ops.py  git.py  search.py  web.py
tests/: test_basic.py
